# media-tsunami

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  tests.yml
examples/: whystrohm-CLAUDE.md  whystrohm-brand-config.json
scripts/: inspect_fingerprint.py
src/tsunami/: cli.py
src/tsunami/engine/: cadence_analyzer.py  forbidden_detector.py  pipeline.py  tone_classifier.py  vocabulary_clusterer.py  voice_fingerprinter.py
test_corpus/whystrohm/: about.md  blog-47-videos-one-month-zero-founder-time.md  blog-agency-in-house-third-option.md  blog-brand-guidelines-nobody-follows.md  blog-brand-requires-daily-decisions-performance.md  blog-five-people-posting-none-sound-like-you.md  blog-founder-content-costs-12k-per-month.md  blog-i-scored-my-own-content.md  blog-the-content-spiral.md  blog-the-engine-content-infrastructure-for-founders.md  blog-voice-capture-to-content.md  blog-you-never-needed-more-content.md  blog-you-rewrote-that-email-three-times.md  blog-your-ai-doesnt-sound-like-you.md  blog-your-ai-resets-every-conversation.md  blog-your-brand-is-not-a-daily-decision.md  blog-your-brand-sounds-like-you-thats-the-problem.md  blog-your-content-has-a-single-point-of-failure.md  home.md
tests/: test_cadence_analyzer.py  test_folder_reader.py  test_forbidden_detector.py  test_tone_classifier.py  test_vocabulary_clusterer.py  test_voice_fingerprinter.py  test_web_scraper.py
(+9 files in other folders)
