[project]
name = "media-tsunami"
version = "0.1.0"
description = "Brand Fingerprint Engine — extract voice + visual rules from existing content as executable LLM configs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WhyStrohm", email = "hello@whystrohm.com" }]
keywords = ["brand", "voice", "llm", "claude", "fingerprint", "content"]

dependencies = [
    "spacy>=3.7",
    "sentence-transformers>=2.7",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "httpx>=0.27",
    "click>=8.1",
    "pyyaml>=6.0",
    "datasets>=2.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
tsunami = "tsunami.cli:main"

[project.urls]
Homepage = "https://whystrohm.com/scan"
Repository = "https://github.com/whystrohm/media-tsunami"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
